--- a/keras/keras_Titanic_01.ipynb
+++ b/keras/keras_Titanic_01.ipynb
@@ -28,22 +28,12 @@
     },
     {
       "metadata": {
-        "id": "q9s32dnfS-fZ",
+        "id": "j9ZClbKoXgQL",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "Antes de executar este notebook, crie um ambiente virtual com o comando abaixo no terminal:"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "H0a4QqQRS-fb",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "conda create -n exercicioscap02 numpy pandas scikit-learn keras tensorflow"
+        "## Verifica se a GPU está ativa"
       ]
     },
     {
