--- a/keras/keras_Titanic_01.ipynb
+++ b/keras/keras_Titanic_01.ipynb
@@ -105,6 +105,20 @@
     },
     {
       "metadata": {
+        "id": "KB-242VxeYfF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#!python -m pip install --upgrade https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.12.0-py3-none-any.whl\n",
+        "#!pip install keras"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "-QzeEtYTS-fk",
         "colab_type": "code",
         "colab": {}
