--- a/DNN/DNN_04.ipynb
+++ b/DNN/DNN_04.ipynb
@@ -988,11 +988,14 @@
         "### Regularização L2\n",
         "\n",
         "Penaliza o valor quadrado do peso (o que também explica o \"2\" do nome). \n",
+        "\n",
         "Tende a conduzir todos os pesos para valores menores.\n",
         "\n",
         "### Regularização L1\n",
-        "Penaliza o valor absoluto do peso. T\n",
-        "ende a conduzir alguns pesos para exatamente zero (introduzindo  sparsity  no  modelo),  enquanto  permite  que  alguns  pesos  sejam  grandes.\n"
+        "Penaliza o valor absoluto do peso.\n",
+        "\n",
+        "Tende a conduzir alguns pesos para exatamente zero (introduzindo  espacidade  no  modelo),  \n",
+        "enquanto  permite  que  alguns  pesos  sejam  grandes.\n"
       ]
     }
   ]
