--- a/DNN/DNN_MNIST.ipynb
+++ b/DNN/DNN_MNIST.ipynb
@@ -352,9 +352,73 @@
     },
     {
       "metadata": {
+        "id": "jJ7QMx2avwQx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "db2f3d88-4f20-40ef-9ba1-a63dc72807c7"
+      },
+      "cell_type": "code",
+      "source": [
+        "X_train.shape"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000, 28, 28)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "8m1sq0IHvpyI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e2874302-6938-41ed-9dd2-748fb3aecb37"
+      },
+      "cell_type": "code",
+      "source": [
+        "X_train.shape[1:]"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(28, 28)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "jZu9FrEnsepX",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 340
+        },
+        "outputId": "5cfb0708-6529-4835-ea63-71e6a5331066"
       },
       "cell_type": "code",
       "source": [
@@ -374,8 +438,34 @@
         "# Sumário\n",
         "model.summary()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "flatten_1 (Flatten)          (None, 784)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 512)               401920    \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 512)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 512)               262656    \n",
+            "_________________________________________________________________\n",
+            "dropout_2 (Dropout)          (None, 512)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_3 (Dense)              (None, 10)                5130      \n",
+            "=================================================================\n",
+            "Total params: 669,706\n",
+            "Trainable params: 669,706\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -415,7 +505,11 @@
       "metadata": {
         "id": "WaLObxTUsepk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ecaf6bc4-e94f-4581-84d7-c41c5271d700"
       },
       "cell_type": "code",
       "source": [
@@ -426,8 +520,16 @@
         "# Print\n",
         "print('Acurácia em Teste: %.4f%%' % accuracy)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Acurácia em Teste: 11.6000%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -459,7 +561,11 @@
       "metadata": {
         "id": "cG5iBgrwsepu",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 714
+        },
+        "outputId": "7070188a-eca0-4d48-b705-5fbbed7d365b"
       },
       "cell_type": "code",
       "source": [
@@ -473,8 +579,56 @@
         "                 verbose = 1, \n",
         "                 shuffle = True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 48000 samples, validate on 12000 samples\n",
+            "Epoch 1/10\n",
+            "48000/48000 [==============================] - 3s 54us/step - loss: 0.2711 - acc: 0.9160 - val_loss: 0.1167 - val_acc: 0.9659\n",
+            "\n",
+            "Epoch 00001: val_loss improved from inf to 0.11673, saving model to mnist.model.best.hdf5\n",
+            "Epoch 2/10\n",
+            "48000/48000 [==============================] - 2s 47us/step - loss: 0.1125 - acc: 0.9661 - val_loss: 0.1108 - val_acc: 0.9686\n",
+            "\n",
+            "Epoch 00002: val_loss improved from 0.11673 to 0.11084, saving model to mnist.model.best.hdf5\n",
+            "Epoch 3/10\n",
+            "48000/48000 [==============================] - 2s 48us/step - loss: 0.0777 - acc: 0.9765 - val_loss: 0.0867 - val_acc: 0.9750\n",
+            "\n",
+            "Epoch 00003: val_loss improved from 0.11084 to 0.08672, saving model to mnist.model.best.hdf5\n",
+            "Epoch 4/10\n",
+            "48000/48000 [==============================] - 2s 48us/step - loss: 0.0626 - acc: 0.9807 - val_loss: 0.0976 - val_acc: 0.9727\n",
+            "\n",
+            "Epoch 00004: val_loss did not improve from 0.08672\n",
+            "Epoch 5/10\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0511 - acc: 0.9846 - val_loss: 0.0921 - val_acc: 0.9769\n",
+            "\n",
+            "Epoch 00005: val_loss did not improve from 0.08672\n",
+            "Epoch 6/10\n",
+            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0433 - acc: 0.9865 - val_loss: 0.0915 - val_acc: 0.9782\n",
+            "\n",
+            "Epoch 00006: val_loss did not improve from 0.08672\n",
+            "Epoch 7/10\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0383 - acc: 0.9884 - val_loss: 0.1053 - val_acc: 0.9787\n",
+            "\n",
+            "Epoch 00007: val_loss did not improve from 0.08672\n",
+            "Epoch 8/10\n",
+            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0325 - acc: 0.9899 - val_loss: 0.0908 - val_acc: 0.9796\n",
+            "\n",
+            "Epoch 00008: val_loss did not improve from 0.08672\n",
+            "Epoch 9/10\n",
+            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0294 - acc: 0.9910 - val_loss: 0.1148 - val_acc: 0.9770\n",
+            "\n",
+            "Epoch 00009: val_loss did not improve from 0.08672\n",
+            "Epoch 10/10\n",
+            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0269 - acc: 0.9917 - val_loss: 0.1105 - val_acc: 0.9779\n",
+            "\n",
+            "Epoch 00010: val_loss did not improve from 0.08672\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -514,7 +668,11 @@
       "metadata": {
         "id": "nLYYKdk-sep4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "38764b0e-d203-44ef-ac91-1467394987d3"
       },
       "cell_type": "code",
       "source": [
@@ -525,8 +683,16 @@
         "# Print\n",
         "print('Acurácia em Teste: %.4f%%' % accuracy)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Acurácia em Teste: 97.7900%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
