--- a/DNN/DNN_MNIST.ipynb
+++ b/DNN/DNN_MNIST.ipynb
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "79f2886f-22b6-4508-fcd1-22bf35c81750"
+        "outputId": "9da38639-31f2-401c-dd01-c3d0d618ea81"
       },
       "cell_type": "code",
       "source": [
@@ -79,7 +79,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 1s 0us/step\n",
+            "11493376/11490434 [==============================] - 2s 0us/step\n",
             "\n",
             "O Dataset MNIST tem 60000 exemplos de treinamento.\n",
             "\n",
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "f2ec0cf6-58af-445a-e1a5-ec44d3a28fc6"
+        "outputId": "f608812a-9ade-4258-ad2f-795e6aaef4fa"
       },
       "cell_type": "code",
       "source": [
@@ -179,7 +179,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 700
         },
-        "outputId": "957e74c6-c90a-4d66-e794-5e0762ba5128"
+        "outputId": "b677bfc4-e982-49da-b348-d1fe249b769e"
       },
       "cell_type": "code",
       "source": [
@@ -187,7 +187,7 @@
         "ax = fig.add_subplot(111)\n",
         "visualize_input(X_train[0], ax)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +259,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "d95cfb8c-c068-4ad8-8fcc-734537b92779"
+        "outputId": "b8d6611b-95a3-49e5-a151-7de0b23c61b6"
       },
       "cell_type": "code",
       "source": [
@@ -308,7 +308,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "9c7f946b-9117-43f8-a998-ae4da86e73a6"
+        "outputId": "d40fcb44-0bc0-4f9d-e5a1-2789a15ccf3a"
       },
       "cell_type": "code",
       "source": [
@@ -358,13 +358,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "db2f3d88-4f20-40ef-9ba1-a63dc72807c7"
+        "outputId": "5837fa88-5073-407f-88a3-7df936986532"
       },
       "cell_type": "code",
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -376,7 +376,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -388,7 +388,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e2874302-6938-41ed-9dd2-748fb3aecb37"
+        "outputId": "cae0519b-b8c5-43bb-9162-92136d80c249"
       },
       "cell_type": "code",
       "source": [
@@ -418,7 +418,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 340
         },
-        "outputId": "5cfb0708-6529-4835-ea63-71e6a5331066"
+        "outputId": "9b06b4cb-821d-4cc4-d4c2-8aa465c80f2e"
       },
       "cell_type": "code",
       "source": [
@@ -438,7 +438,7 @@
         "# Sumário\n",
         "model.summary()"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,23 +509,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ecaf6bc4-e94f-4581-84d7-c41c5271d700"
+        "outputId": "776f447e-7476-4970-d4ca-05dc80cee783"
       },
       "cell_type": "code",
       "source": [
-        "# Acurácia em Teste\n",
+        "# Acurácia em Teste ANTES do treinamento\n",
         "score = model.evaluate(X_test, y_test, verbose = 0)\n",
         "accuracy = 100*score[1]\n",
         "\n",
         "# Print\n",
         "print('Acurácia em Teste: %.4f%%' % accuracy)"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Acurácia em Teste: 11.6000%\n"
+            "Acurácia em Teste: 9.4800%\n"
           ],
           "name": "stdout"
         }
@@ -565,7 +565,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 714
         },
-        "outputId": "7070188a-eca0-4d48-b705-5fbbed7d365b"
+        "outputId": "bcb0eb2b-3e1a-4832-ba71-f990825b5ff0"
       },
       "cell_type": "code",
       "source": [
@@ -579,52 +579,52 @@
         "                 verbose = 1, \n",
         "                 shuffle = True)"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 48000 samples, validate on 12000 samples\n",
             "Epoch 1/10\n",
-            "48000/48000 [==============================] - 3s 54us/step - loss: 0.2711 - acc: 0.9160 - val_loss: 0.1167 - val_acc: 0.9659\n",
+            "48000/48000 [==============================] - 2s 52us/step - loss: 0.2741 - acc: 0.9148 - val_loss: 0.1223 - val_acc: 0.9633\n",
             "\n",
-            "Epoch 00001: val_loss improved from inf to 0.11673, saving model to mnist.model.best.hdf5\n",
+            "Epoch 00001: val_loss improved from inf to 0.12234, saving model to mnist.model.best.hdf5\n",
             "Epoch 2/10\n",
-            "48000/48000 [==============================] - 2s 47us/step - loss: 0.1125 - acc: 0.9661 - val_loss: 0.1108 - val_acc: 0.9686\n",
+            "48000/48000 [==============================] - 2s 48us/step - loss: 0.1146 - acc: 0.9658 - val_loss: 0.1088 - val_acc: 0.9678\n",
             "\n",
-            "Epoch 00002: val_loss improved from 0.11673 to 0.11084, saving model to mnist.model.best.hdf5\n",
+            "Epoch 00002: val_loss improved from 0.12234 to 0.10878, saving model to mnist.model.best.hdf5\n",
             "Epoch 3/10\n",
-            "48000/48000 [==============================] - 2s 48us/step - loss: 0.0777 - acc: 0.9765 - val_loss: 0.0867 - val_acc: 0.9750\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0803 - acc: 0.9760 - val_loss: 0.0959 - val_acc: 0.9734\n",
             "\n",
-            "Epoch 00003: val_loss improved from 0.11084 to 0.08672, saving model to mnist.model.best.hdf5\n",
+            "Epoch 00003: val_loss improved from 0.10878 to 0.09593, saving model to mnist.model.best.hdf5\n",
             "Epoch 4/10\n",
-            "48000/48000 [==============================] - 2s 48us/step - loss: 0.0626 - acc: 0.9807 - val_loss: 0.0976 - val_acc: 0.9727\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0631 - acc: 0.9806 - val_loss: 0.0973 - val_acc: 0.9751\n",
             "\n",
-            "Epoch 00004: val_loss did not improve from 0.08672\n",
+            "Epoch 00004: val_loss did not improve from 0.09593\n",
             "Epoch 5/10\n",
-            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0511 - acc: 0.9846 - val_loss: 0.0921 - val_acc: 0.9769\n",
+            "48000/48000 [==============================] - 2s 48us/step - loss: 0.0506 - acc: 0.9851 - val_loss: 0.1021 - val_acc: 0.9747\n",
             "\n",
-            "Epoch 00005: val_loss did not improve from 0.08672\n",
+            "Epoch 00005: val_loss did not improve from 0.09593\n",
             "Epoch 6/10\n",
-            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0433 - acc: 0.9865 - val_loss: 0.0915 - val_acc: 0.9782\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0446 - acc: 0.9871 - val_loss: 0.1151 - val_acc: 0.9739\n",
             "\n",
-            "Epoch 00006: val_loss did not improve from 0.08672\n",
+            "Epoch 00006: val_loss did not improve from 0.09593\n",
             "Epoch 7/10\n",
-            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0383 - acc: 0.9884 - val_loss: 0.1053 - val_acc: 0.9787\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0397 - acc: 0.9880 - val_loss: 0.0869 - val_acc: 0.9803\n",
             "\n",
-            "Epoch 00007: val_loss did not improve from 0.08672\n",
+            "Epoch 00007: val_loss improved from 0.09593 to 0.08695, saving model to mnist.model.best.hdf5\n",
             "Epoch 8/10\n",
-            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0325 - acc: 0.9899 - val_loss: 0.0908 - val_acc: 0.9796\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0345 - acc: 0.9896 - val_loss: 0.1060 - val_acc: 0.9787\n",
             "\n",
-            "Epoch 00008: val_loss did not improve from 0.08672\n",
+            "Epoch 00008: val_loss did not improve from 0.08695\n",
             "Epoch 9/10\n",
-            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0294 - acc: 0.9910 - val_loss: 0.1148 - val_acc: 0.9770\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0309 - acc: 0.9905 - val_loss: 0.0974 - val_acc: 0.9796\n",
             "\n",
-            "Epoch 00009: val_loss did not improve from 0.08672\n",
+            "Epoch 00009: val_loss did not improve from 0.08695\n",
             "Epoch 10/10\n",
-            "48000/48000 [==============================] - 2s 50us/step - loss: 0.0269 - acc: 0.9917 - val_loss: 0.1105 - val_acc: 0.9779\n",
+            "48000/48000 [==============================] - 2s 49us/step - loss: 0.0272 - acc: 0.9915 - val_loss: 0.1018 - val_acc: 0.9798\n",
             "\n",
-            "Epoch 00010: val_loss did not improve from 0.08672\n"
+            "Epoch 00010: val_loss did not improve from 0.08695\n"
           ],
           "name": "stdout"
         }
@@ -672,7 +672,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "38764b0e-d203-44ef-ac91-1467394987d3"
+        "outputId": "a77cef4d-1af7-4ee0-a1a0-af56fc873ebe"
       },
       "cell_type": "code",
       "source": [
@@ -683,12 +683,12 @@
         "# Print\n",
         "print('Acurácia em Teste: %.4f%%' % accuracy)"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Acurácia em Teste: 97.7900%\n"
+            "Acurácia em Teste: 98.2300%\n"
           ],
           "name": "stdout"
         }
