--- a/CNN/CNN01.ipynb
+++ b/CNN/CNN01.ipynb
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "bcaf4a91-9c9e-434c-a25c-f4310d1ac992"
+        "outputId": "bf4146ab-92f2-433e-c5ac-514480b818e4"
       },
       "cell_type": "code",
       "source": [
@@ -79,15 +79,15 @@
         "!cp *.jpg images\n",
         "!cp *.gif images\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-0ad11b01-adcd-4d05-9a17-e96782c4e60c\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-0ad11b01-adcd-4d05-9a17-e96782c4e60c\">\n",
+              "     <input type=\"file\" id=\"files-1bf8c0e4-ddaf-49b1-a45f-cbb729aede5f\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-1bf8c0e4-ddaf-49b1-a45f-cbb729aede5f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -118,14 +118,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "1d10c8ea-ff93-457f-963e-c3899bda024a"
+        "outputId": "27c85ab0-8ffd-4f3d-ddc6-ca271a48beb6"
       },
       "cell_type": "code",
       "source": [
         "#!rm images\n",
         "!ls images"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,19 +453,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 289
         },
-        "outputId": "0dbe91f3-f4bd-47ad-af44-f3bbe0097eef"
+        "outputId": "3575dd2d-f79a-4e02-c198-90d7a93f3121"
       },
       "cell_type": "code",
       "source": [
         "# Checando a memória da GPU\n",
         "!nvidia-smi"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Sat Jan 19 11:39:39 2019       \n",
+            "Sat Jan 19 12:09:00 2019       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 396.44                 Driver Version: 396.44                    |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -492,9 +492,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 119
         },
-        "outputId": "4ab65081-09c9-4267-d201-251eb9a4e8f0"
+        "outputId": "3566bcfb-71dc-4b12-89d0-be1379054d64"
       },
       "cell_type": "code",
       "source": [
@@ -511,8 +511,15 @@
         "print(\"Shape x_test: {}\".format(x_test.shape))\n",
         "print(\"Shape y_test: {}\".format(y_test.shape))"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -544,7 +551,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1019
         },
-        "outputId": "e55ebc1e-b07c-4ef8-a628-67e20f7cb8fa"
+        "outputId": "f69f469b-f4c7-479b-b2e7-ba25303f6c1e"
       },
       "cell_type": "code",
       "source": [
@@ -564,7 +571,7 @@
         "df = pd.DataFrame(single.reshape(28,28))\n",
         "df.loc[:,4:23] # onde pixel > 0"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1336,7 +1343,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -1349,7 +1356,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "9d280105-b283-479d-f39c-b364c081fa50"
+        "outputId": "f306b825-86e3-44de-fd37-1af58a176f22"
       },
       "cell_type": "code",
       "source": [
@@ -1363,7 +1370,7 @@
         "plt.imshow(a, cmap = 'gray', interpolation = 'nearest')\n",
         "print(\"Imagem (#{}) é o dígito '{}'\".format(digit, y_train[digit]))"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1404,7 +1411,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "3d2e7c34-2698-44cc-9601-5927bfb51bf3"
+        "outputId": "83d995aa-5691-4936-d870-62feeb398811"
       },
       "cell_type": "code",
       "source": [
@@ -1416,11 +1423,11 @@
         "\n",
         "# Reshape dos dados de treino e de teste e input_shape\n",
         "if backend.image_data_format() == 'channels_first': # canal de cores\n",
-        "    x_train = x_train.reshape(x_train.shape[0], 1, img_rows, img_cols)\n",
+        "    x_train = x_train.reshape(x_train.shape[0], 1, img_rows, img_cols) # 1 canal de cor\n",
         "    x_test = x_test.reshape(x_test.shape[0], 1, img_rows, img_cols)\n",
         "    input_shape = (1, img_rows, img_cols)\n",
         "else:\n",
-        "    x_train = x_train.reshape(x_train.shape[0], img_rows, img_cols, 1)\n",
+        "    x_train = x_train.reshape(x_train.shape[0], img_rows, img_cols, 1) # 1 canal de cor\n",
         "    x_test = x_test.reshape(x_test.shape[0], img_rows, img_cols, 1)\n",
         "    input_shape = (img_rows, img_cols, 1)\n",
         "\n",
@@ -1438,7 +1445,7 @@
         "print(\"Exemplos de Teste: {}\".format(x_test.shape[0]))\n",
         "print(\"Input Shape: {}\".format(input_shape))"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1460,7 +1467,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 737
         },
-        "outputId": "1533ec30-ded7-495d-b029-b82e1e80ed6f"
+        "outputId": "1bbdaf30-8700-472f-bae5-0dd53886759d"
       },
       "cell_type": "code",
       "source": [
@@ -1482,7 +1489,7 @@
         "\n",
         "df2.loc[5:24,4:23] # onde pixel > 0"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2052,7 +2059,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -2064,7 +2071,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 771
         },
-        "outputId": "3fa01b98-58c7-4be8-f782-b6fbc5dd96ad"
+        "outputId": "79fe6b22-ca31-49f0-bb48-7c757c641802"
       },
       "cell_type": "code",
       "source": [
@@ -2090,7 +2097,7 @@
         "print('numero de 0s:', (28*28) - count1)  \n",
         "df2.loc[5:24,4:23] # onde pixel > 0"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2662,7 +2669,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -2682,9 +2689,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
+          "height": 459
         },
-        "outputId": "de6098c2-727b-4679-be5c-a56eef22c5e6"
+        "outputId": "16882608-4c53-4f0a-a450-92788e0f4c61"
       },
       "cell_type": "code",
       "source": [
@@ -2719,9 +2726,10 @@
         "model.compile(loss = keras.losses.categorical_crossentropy, \n",
         "              optimizer = keras.optimizers.Adadelta(), \n",
         "              metrics = ['accuracy'])\n",
-        "model.summary()"
+        "model.summary()\n",
+        "print('params = pesos')"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2750,7 +2758,8 @@
             "Total params: 303,926\n",
             "Trainable params: 303,926\n",
             "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
+            "_________________________________________________________________\n",
+            "params = pesos\n"
           ],
           "name": "stdout"
         }
@@ -2785,14 +2794,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "15c9c778-1167-4b70-e88c-79f137f7010a"
+        "outputId": "05386133-00e9-496a-a176-564f3ab14690"
       },
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2804,7 +2813,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -2816,14 +2825,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0081de6a-16c7-4091-d7f4-192120d28822"
+        "outputId": "a62336ba-dd7d-4777-abeb-7a55a8a84024"
       },
       "cell_type": "code",
       "source": [
         "import keras as kr\n",
         "kr.__version__"
       ],
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2835,7 +2844,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 12
         }
       ]
     },
@@ -2848,7 +2857,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 459
         },
-        "outputId": "b8c00844-bae7-45d5-914c-1ce6ab4377f0"
+        "outputId": "c053b0e9-042b-4098-bded-67d0b3b4aa8c"
       },
       "cell_type": "code",
       "source": [
@@ -2861,37 +2870,37 @@
         "model.fit(x_train, y_train, batch_size = batch_size, epochs = epochs, verbose = 2, validation_data = (x_test, y_test))\n",
         "print(\"tempo decorrido:\", datetime.now() - t1)"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 60000 samples, validate on 10000 samples\n",
             "Epoch 1/12\n",
-            " - 8s - loss: 0.2922 - acc: 0.9074 - val_loss: 0.0554 - val_acc: 0.9825\n",
+            " - 6s - loss: 0.2998 - acc: 0.9034 - val_loss: 0.1682 - val_acc: 0.9386\n",
             "Epoch 2/12\n",
-            " - 4s - loss: 0.0603 - acc: 0.9809 - val_loss: 0.0448 - val_acc: 0.9869\n",
+            " - 4s - loss: 0.0732 - acc: 0.9768 - val_loss: 0.0631 - val_acc: 0.9786\n",
             "Epoch 3/12\n",
-            " - 4s - loss: 0.0412 - acc: 0.9870 - val_loss: 0.0312 - val_acc: 0.9897\n",
+            " - 4s - loss: 0.0488 - acc: 0.9844 - val_loss: 0.0425 - val_acc: 0.9858\n",
             "Epoch 4/12\n",
-            " - 4s - loss: 0.0324 - acc: 0.9896 - val_loss: 0.0537 - val_acc: 0.9827\n",
+            " - 4s - loss: 0.0367 - acc: 0.9883 - val_loss: 0.0335 - val_acc: 0.9892\n",
             "Epoch 5/12\n",
-            " - 4s - loss: 0.0255 - acc: 0.9918 - val_loss: 0.0306 - val_acc: 0.9906\n",
+            " - 4s - loss: 0.0286 - acc: 0.9909 - val_loss: 0.0299 - val_acc: 0.9895\n",
             "Epoch 6/12\n",
-            " - 4s - loss: 0.0217 - acc: 0.9928 - val_loss: 0.0381 - val_acc: 0.9884\n",
+            " - 4s - loss: 0.0224 - acc: 0.9929 - val_loss: 0.0303 - val_acc: 0.9907\n",
             "Epoch 7/12\n",
-            " - 4s - loss: 0.0169 - acc: 0.9948 - val_loss: 0.0369 - val_acc: 0.9885\n",
+            " - 4s - loss: 0.0187 - acc: 0.9942 - val_loss: 0.0378 - val_acc: 0.9875\n",
             "Epoch 8/12\n",
-            " - 4s - loss: 0.0140 - acc: 0.9955 - val_loss: 0.0419 - val_acc: 0.9874\n",
+            " - 4s - loss: 0.0157 - acc: 0.9949 - val_loss: 0.0366 - val_acc: 0.9885\n",
             "Epoch 9/12\n",
-            " - 4s - loss: 0.0115 - acc: 0.9964 - val_loss: 0.0328 - val_acc: 0.9893\n",
+            " - 4s - loss: 0.0119 - acc: 0.9963 - val_loss: 0.0388 - val_acc: 0.9875\n",
             "Epoch 10/12\n",
-            " - 4s - loss: 0.0105 - acc: 0.9967 - val_loss: 0.0315 - val_acc: 0.9918\n",
+            " - 4s - loss: 0.0108 - acc: 0.9966 - val_loss: 0.0282 - val_acc: 0.9907\n",
             "Epoch 11/12\n",
-            " - 4s - loss: 0.0082 - acc: 0.9974 - val_loss: 0.0312 - val_acc: 0.9918\n",
+            " - 4s - loss: 0.0084 - acc: 0.9975 - val_loss: 0.0290 - val_acc: 0.9916\n",
             "Epoch 12/12\n",
-            " - 4s - loss: 0.0065 - acc: 0.9981 - val_loss: 0.0318 - val_acc: 0.9923\n",
-            "tempo decorrido: 0:00:57.391607\n"
+            " - 4s - loss: 0.0069 - acc: 0.9979 - val_loss: 0.0305 - val_acc: 0.9916\n",
+            "tempo decorrido: 0:00:55.888773\n"
           ],
           "name": "stdout"
         }
@@ -2905,13 +2914,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "07f352f7-1c40-4e8a-86a3-400ef47a8595"
+        "outputId": "4e8bc2c9-1d56-4abc-c8df-10bada3ca82b"
       },
       "cell_type": "code",
       "source": [
         "x_train.shape, y_train.shape"
       ],
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2923,7 +2932,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 14
         }
       ]
     },
@@ -2931,14 +2940,31 @@
       "metadata": {
         "id": "Xq_4IMcwWN1B",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a8ffeebd-754e-4c7c-928e-ef844feb322b"
       },
       "cell_type": "code",
       "source": [
         "((60000, 28, 28, 1), (60000, 10))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((60000, 28, 28, 1), (60000, 10))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "metadata": {
@@ -2948,13 +2974,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a69b884f-5c43-4195-b989-2f695c8c574d"
+        "outputId": "9dba69cb-13f1-4ec9-eb73-463cd3aab9b6"
       },
       "cell_type": "code",
       "source": [
         "x_test.shape, y_test.shape"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2966,7 +2992,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -2978,7 +3004,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "465c622c-2bdb-45f0-a674-27cb19e937d9"
+        "outputId": "2e02a278-1260-47a3-deac-91ae21f2fecc"
       },
       "cell_type": "code",
       "source": [
@@ -3003,7 +3029,7 @@
         "# Uma vez que existe um termo de bias por filtro, a camada convolucional tem bias igual ao valor de K. \n",
         "# Assim, o número de parâmetros na camada convolucional é dado por K * F * F * D_in + K."
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -3046,14 +3072,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "417a92e0-d0df-4c81-a2bf-e0c66139a6c2"
+        "outputId": "e54cf559-911b-4619-eb77-bff55962a26a"
       },
       "cell_type": "code",
       "source": [
         "for layer in model.layers:\n",
         "    print(layer.name, layer.output_shape ) # layer.inbound_nodes layser.outbound_nodes"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -3092,7 +3118,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "9c8840ee-a38a-4e75-e9b8-e1a601fd0845"
+        "outputId": "79f4fd52-2164-4116-c2c3-c1bf7bc10b7b"
       },
       "cell_type": "code",
       "source": [
@@ -3105,13 +3131,13 @@
         "print('Perda em Teste: {}'.format(score[0]))\n",
         "print('Acurácia em Teste: {}'.format(score[1]))"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Perda em Teste: 0.03181745680046615\n",
-            "Acurácia em Teste: 0.9923\n"
+            "Perda em Teste: 0.030474087153470556\n",
+            "Acurácia em Teste: 0.9916\n"
           ],
           "name": "stdout"
         }
@@ -3139,15 +3165,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4993762d-4a3f-4bb1-b9ad-a697df785ee0"
+        "outputId": "c0bbecfe-4205-4557-ebdb-691a619418dd"
       },
       "cell_type": "code",
       "source": [
         "from sklearn import metrics\n",
         "\n",
         "# Para avaliação do modelo usando GPU, usamos amostras dos dados de teste\n",
-        "small_x = x_test[1:100]\n",
-        "small_y = y_test[1:100]\n",
+        "small_x = x_test[1:1000]\n",
+        "small_y = y_test[1:1000]\n",
         "small_y2 = np.argmax(small_y, axis = 1)\n",
         "pred = model.predict(small_x)\n",
         "pred = np.argmax(pred,axis=1)\n",
@@ -3159,7 +3185,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Acurácia: 1.0\n"
+            "Acurácia: 0.987987987987988\n"
           ],
           "name": "stdout"
         }
@@ -3173,13 +3199,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "1a2007e7-2461-4e62-c054-54a440674ff9"
+        "outputId": "3de51774-6c53-4894-a1d7-4f73bf9acbf6"
       },
       "cell_type": "code",
       "source": [
         "print(small_y[:8])"
       ],
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
