--- a/CNN/CNN01.ipynb
+++ b/CNN/CNN01.ipynb
@@ -312,6 +312,13 @@
         "* Stride - passo\n",
         "* Padding - preenchimento\n",
         "* Função de Ativação\n",
+        "* Pooling Layers - Tamanho do Layer de pooling\n",
+        "\n",
+        "**Camada de Max Pooling**\n",
+        "\n",
+        "\n",
+        "![Max_Pool](https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/CNN/images/MaxPool.png?raw=true \"Max_Pool\")\n",
+        "\n",
         "\n",
         "Nós explicamos a conectividade de cada neurônio na camada convolucional ao volume de entrada, mas ainda não discutimos quantos neurônios existem no volume de saída ou como eles estão dispostos. Três hiperparâmetros controlam o tamanho do volume de saída: a profundidade (depth), o passo (stride) e o preenchimento (padding). \n",
         "\n",
