--- a/CNN/TransferLearning.ipynb
+++ b/CNN/TransferLearning.ipynb
@@ -30,8 +30,7 @@
         "NV4kPHnJjH40",
         "n48iG5ZUjH42",
         "JDerX5ybjH5A",
-        "RiycqrfGjH5E",
-        "7xxtC5NqjH5G"
+        "RiycqrfGjH5E"
       ],
       "include_colab_link": true
     },
@@ -2081,37 +2080,6 @@
         "O conjunto de dados CIFAR-10 contém um total de 60.000 imagens. O uso combinado de tempo desta técnica de Transfer Learning costuma ser menos da metade do tempo necessário para treinar uma rede neural diretamente para o conjunto de dados CIFAR-10 e alcançamos uma precisão de classificação significativamente maior.\n",
         "\n",
         "Assim, transferir o aprendizado com o modelo Inception é útil para criar um classificador de imagem para o seu próprio conjunto de dados."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "7xxtC5NqjH5G",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Exercícios\n",
-        "\n",
-        "Estas são algumas sugestões para exercícios que podem ajudar a melhorar suas habilidades com TensorFlow. É importante obter experiência prática com o TensorFlow para aprender a usá-lo corretamente.\n",
-        "\n",
-        "Você pode querer fazer backup desse Notebook e dos outros arquivos antes de fazer qualquer alteração.\n",
-        "\n",
-        "* Tente usar o conjunto de treinamento completo no PCA e t-SNE. O que acontece?\n",
-        "* Tente mudar a rede neural para fazer a nova classificação. O que acontece se você remover a camada totalmente conectada ou adicionar mais camadas totalmente conectadas?\n",
-        "* O que acontece se você executar menos ou mais iterações de otimização?\n",
-        "* O que acontece se você alterar o `learning_rate` para o otimizador?\n",
-        "* Tente usar o conjunto de dados MNIST em vez do conjunto de dados CIFAR-10.\n",
-        "* Explique a um amigo como o programa funciona."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "pjeJuc3BjH5J",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# Fim"
       ]
     }
   ]
